[gd_scene load_steps=7 format=3 uid="uid://brjbjtbv6lb5y"]

[ext_resource type="Texture2D" uid="uid://hwyxa0p6y27d" path="res://assets/sprites/drone/drone-placeholder.png" id="1_35lu7"]
[ext_resource type="Script" uid="uid://ccgh85cphr2x" path="res://scripts/drone.gd" id="1_ow65y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_35lu7"]
atlas = ExtResource("1_35lu7")
region = Rect2(0, 0, 341, 341)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow65y"]
atlas = ExtResource("1_35lu7")
region = Rect2(341, 0, 341, 341)

[sub_resource type="AtlasTexture" id="AtlasTexture_x33g3"]
atlas = ExtResource("1_35lu7")
region = Rect2(682, 0, 341, 341)

[sub_resource type="SpriteFrames" id="SpriteFrames_rvslj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_35lu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow65y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x33g3")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}]

[node name="Drone" type="Node2D"]
script = ExtResource("1_ow65y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_rvslj")
animation = &"hover"
autoplay = "hover"
frame_progress = 0.410055

[node name="RayCastNorth" type="RayCast2D" parent="."]

[node name="RayCastEast" type="RayCast2D" parent="."]

[node name="RayCastSouth" type="RayCast2D" parent="."]

[node name="RayCastWest" type="RayCast2D" parent="."]
